--- a/index.html
+++ b/index.html
@@ -40,13 +40,82 @@
         <p>UI Design & App Development</p>
         <a href="">Learn more</a>
     </article>
-    <article></article>
-    <article></article>
+    <article>
+        <img src="/project-assets 2/projects-section/2.jpg" alt="Dashcoin">
+        <h3>Dashcoin</h3>
+        <p>Web Development</p>
+        <a href="">Learn more</a>
+    </article>
+    <article>
+        <img src="/project-assets 2/projects-section/3.jpg" alt="simplify">
+        <h3>Vectorify</h3>
+        <p>User Experience Desing</p>
+        <a href="">Learn more</a>
+    </article>
 </section>
-<section></section>
-<section></section>
-<section></section>
-<footer></footer>
+<section>
+    <img src="/project-assets 2/testimonial-section/memoji-1.png" alt="emoji-1">
+    <img src="/project-assets 2/testimonial-section/memoji-2.png" alt="emoji-2">
+    <img src="/project-assets 2/testimonial-section/memoji-3.png" alt="emoji-3">
+    <img src="/project-assets 2/testimonial-section/memoji-4.png" alt="emoji-4">
+    <img src="/project-assets 2/testimonial-section/orbit.png" alt="orbit">
+    <h2>Hear What Our Clients Have to Say</h2>
+    <h3>“Circle helped us through every stage of our startup. We really enjoyed working with you.”</h3>
+    <div>
+        <p>Kristin Watson</p>
+        <a href="">Booking.com</a>
+        <img src="/project-assets 2/testimonial-section/profile.png" alt="">
+    </div>
+</section>
+<section>
+    <h2>Our Services</h2>
+    <article>
+        <img src="/project-assets 2/services-section/icons/1.svg" alt="">
+        <h3>User Interface Design</h3>
+        <p>Circle provides you with a stunning user interface design that is accessible to everyone.</p>
+        <a href="/">Learn More</a>
+    </article>
+    <article>
+        <img src="/project-assets 2/services-section/icons/2.svg" alt="">
+        <h3>User Experience Design</h3>
+        <p>Circle always focuses on delivering the best user experience to your customers.</p>
+        <a href="/">Learn More</a>
+    </article>
+    <article>
+        <img src="/project-assets 2/services-section/icons/3.svg" alt="">
+        <h3>Application Development</h3>
+        <p>We develop high-quality mobile and web applications using the latest technology stack.</p>
+        <a href="/">Learn More</a>
+    </article>
+</section>
+<section>
+    <div>
+        <h2>Do you have any questions?</h2>
+        <p>let us help you!</p>
+        <input type="email" placeholder="Enter your email">
+        <button>Suscribe</button>
+    </div>
+</section>
+<footer>
+    <div>
+        <img src="/project-assets 2/logos/circle.svg" alt="logo">
+        <p>2972 Westheimer Rd. Santa Ana, Illinois 85486 </p>
+    </div>
+    <div>
+        <ul>
+            <li>Team</li>
+            <li>Services</li>
+            <li>About Us</li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>Press</li>
+            <li>Projects</li>
+            <li>Privacy Policy</li>
+        </ul>
+    </div>
+</footer>
 
 </body>
 </html>
