nav & section 1 ==> IMG ==> Done

--- a/index.html
+++ b/index.html
@@ -4,27 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/index.css">
     <title>Projec</title>
 </head>
-<body>
-    <nav>
-        <img src="/project-assets 2/logos/circle.svg" alt="logo">
-        <ul>
-            <li>Home</li>
-            <li>Project</li>
-            <li>Services</li>
-        </ul>
-        <button>Contact Us</button>
-    </nav>
-<section>
-    <h1>Empower Your Business With Stunning Desing!</h1>
-    <p>Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
+<body> 
+        <nav>
+            <div class="nav-bar-left">
+                <img class="logo" src="/project-assets 2/logos/circle.svg" alt="logo">
+            </div>
+           <div class="nav-bar-center">
+                <ul>
+                    <li>
+                        <a href="#Home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#Project">Project</a>
+                    </li>
+                    <li>
+                        <a href="#Services">Services</a>
+                    </li>
+                </ul>
+           </div>
+           <div class="nav-bar-right">
+                 <button id="nav-btn" class="background-btn">Contact Us</button>
+           </div>
+            
+        </nav>
+    
+<section id="section-1">
+   <div id="image-hero-section">
     <img src="/project-assets 2/hero-section/hero-image.png" alt="hero-image">
     <img src="/project-assets 2/hero-section/card-1.png" alt="card-1">
     <img src="/project-assets 2/hero-section/card-2.png" alt="card-2">
-    <button>Get in touch</button>
+   </div>
+   <h1>Empower Your Business With Stunning Desing!</h1>
+   <p class="text">Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
+    <button class="background-btn">Get in touch</button>
     <button>See our work</button>
 </section>
+
 <section>
     <img src="/project-assets 2/logos/airbnb-logo.svg" alt="airbnb-logo">
     <img src="/project-assets 2/logos/google-logo.svg" alt="google-logo">
@@ -37,7 +55,7 @@
     <article>
         <img src="/project-assets 2/projects-section/1.jpg" alt="simplify">
         <h3>Simplify</h3>
-        <p>UI Design & App Development</p>
+        <p class="text">UI Design & App Development</p>
         <a href="">Learn more</a>
     </article>
     <article>
@@ -49,7 +67,7 @@
     <article>
         <img src="/project-assets 2/projects-section/3.jpg" alt="simplify">
         <h3>Vectorify</h3>
-        <p>User Experience Desing</p>
+        <p class="text">User Experience Desing</p>
         <a href="">Learn more</a>
     </article>
 </section>
@@ -78,13 +96,13 @@
     <article>
         <img src="/project-assets 2/services-section/icons/2.svg" alt="">
         <h3>User Experience Design</h3>
-        <p>Circle always focuses on delivering the best user experience to your customers.</p>
+        <p class="text">Circle always focuses on delivering the best user experience to your customers.</p>
         <a href="/">Learn More</a>
     </article>
     <article>
         <img src="/project-assets 2/services-section/icons/3.svg" alt="">
         <h3>Application Development</h3>
-        <p>We develop high-quality mobile and web applications using the latest technology stack.</p>
+        <p class="text">We develop high-quality mobile and web applications using the latest technology stack.</p>
         <a href="/">Learn More</a>
     </article>
 </section>
@@ -93,7 +111,7 @@
         <h2>Do you have any questions?</h2>
         <p>let us help you!</p>
         <input type="email" placeholder="Enter your email">
-        <button>Suscribe</button>
+        <button class="background-btn">Suscribe</button>
     </div>
 </section>
 <footer>
