--- a/index.html
+++ b/index.html
@@ -39,38 +39,44 @@
    </div>
    <h1>Empower Your Business With Stunning Desing!</h1>
    <p class="text">Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
+   <div>
     <button class="background-btn">Get in touch</button>
     <button>See our work</button>
+   </div> 
+   
 </section>
 
-<section>
+<section id="section-2">
     <img src="/project-assets 2/logos/airbnb-logo.svg" alt="airbnb-logo">
     <img src="/project-assets 2/logos/google-logo.svg" alt="google-logo">
     <img src="/project-assets 2/logos/microsoft-logo.svg" alt="microsoft-logo">
     <img src="/project-assets 2/logos/fedex-logo.svg" alt="fedex-logo">
     <img src="/project-assets 2/logos/amazon-logo.svg" alt="amazon-logo">
 </section>
-<section>
+<div id="div-section-3">
     <h2>Recent Projects</h2>
-    <article>
-        <img src="/project-assets 2/projects-section/1.jpg" alt="simplify">
-        <h3>Simplify</h3>
-        <p class="text">UI Design & App Development</p>
-        <a href="">Learn more</a>
-    </article>
-    <article>
-        <img src="/project-assets 2/projects-section/2.jpg" alt="Dashcoin">
-        <h3>Dashcoin</h3>
-        <p>Web Development</p>
-        <a href="">Learn more</a>
-    </article>
-    <article>
-        <img src="/project-assets 2/projects-section/3.jpg" alt="simplify">
-        <h3>Vectorify</h3>
-        <p class="text">User Experience Desing</p>
-        <a href="">Learn more</a>
-    </article>
-</section>
+    <section id="section-3">
+        <article class="card" >
+            <img src="/project-assets 2/projects-section/1.jpg" alt="simplify">
+            <h3>Simplify</h3>
+            <p class="text">UI Design & App Development</p>
+            <a href="">Learn more</a>
+        </article>
+        <article class="card">
+            <img src="/project-assets 2/projects-section/2.jpg" alt="Dashcoin">
+            <h3>Dashcoin</h3>
+            <p class="text">Web Development</p>
+            <a href="">Learn more</a>
+        </article>
+        <article class="card">
+            <img src="/project-assets 2/projects-section/3.jpg" alt="simplify">
+            <h3>Vectorify</h3>
+            <p class="text">User Experience Desing</p>
+            <a href="">Learn more</a>
+        </article>
+    </section>
+</div>
+
 <section>
     <img src="/project-assets 2/testimonial-section/memoji-1.png" alt="emoji-1">
     <img src="/project-assets 2/testimonial-section/memoji-2.png" alt="emoji-2">
