sizing and image adjustment

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <img src="/project-assets 2/logos/fedex-logo.svg" alt="fedex-logo">
     <img src="/project-assets 2/logos/amazon-logo.svg" alt="amazon-logo">
 </section>
+
 <div id="div-section-3">
     <h2>Recent Projects</h2>
     <section id="section-3">
@@ -77,20 +78,18 @@
     </section>
 </div>
 
-<section>
-    <img src="/project-assets 2/testimonial-section/memoji-1.png" alt="emoji-1">
-    <img src="/project-assets 2/testimonial-section/memoji-2.png" alt="emoji-2">
-    <img src="/project-assets 2/testimonial-section/memoji-3.png" alt="emoji-3">
-    <img src="/project-assets 2/testimonial-section/memoji-4.png" alt="emoji-4">
-    <img src="/project-assets 2/testimonial-section/orbit.png" alt="orbit">
-    <h2>Hear What Our Clients Have to Say</h2>
-    <h3>“Circle helped us through every stage of our startup. We really enjoyed working with you.”</h3>
-    <div>
+<section class="testimonial-section">
+        <img src="/project-assets 2/testimonial-section/memoji-1.png" alt="emoji-1">
+        <img src="/project-assets 2/testimonial-section/memoji-2.png" alt="emoji-2">
+        <img src="/project-assets 2/testimonial-section/memoji-3.png" alt="emoji-3">
+        <img src="/project-assets 2/testimonial-section/memoji-4.png" alt="emoji-4">
+        <h2>Hear What Our Clients Have to Say</h2>
+        <h3>“Circle helped us through every stage of our startup. We really enjoyed working with you.”</h3>
         <p>Kristin Watson</p>
         <a href="">Booking.com</a>
-        <img src="/project-assets 2/testimonial-section/profile.png" alt="">
-    </div>
+        <img src="/project-assets 2/testimonial-section/profile.png" alt="">   
 </section>
+
 <section>
     <h2>Our Services</h2>
     <article>
