--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <img src="/project-assets 2/hero-section/card-2.png" alt="card-2">
    </div>
    <h1>Empower Your Business With Stunning Desing!</h1>
-   <p class="text">Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
-   <div>
+   <p class="text text-sect-1">Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
+   <div class="btns">
     <button class="background-btn">Get in touch</button>
-    <button>See our work</button>
+    <a href="/">See our work</a>
    </div> 
    
 </section>
@@ -58,19 +58,19 @@
     <h2>Recent Projects</h2>
     <section id="section-3">
         <article class="card" >
-            <img src="/project-assets 2/projects-section/1.jpg" alt="simplify">
+            <img class= "img-card" src="/project-assets 2/projects-section/1.jpg" alt="simplify">
             <h3>Simplify</h3>
             <p class="text">UI Design & App Development</p>
             <a href="">Learn more</a>
         </article>
         <article class="card">
-            <img src="/project-assets 2/projects-section/2.jpg" alt="Dashcoin">
+            <img class= "img-card" src="/project-assets 2/projects-section/2.jpg" alt="Dashcoin">
             <h3>Dashcoin</h3>
             <p class="text">Web Development</p>
             <a href="">Learn more</a>
         </article>
         <article class="card">
-            <img src="/project-assets 2/projects-section/3.jpg" alt="simplify">
+            <img class= "img-card" src="/project-assets 2/projects-section/3.jpg" alt="simplify">
             <h3>Vectorify</h3>
             <p class="text">User Experience Desing</p>
             <a href="">Learn more</a>
@@ -79,37 +79,41 @@
 </div>
 
 <section class="testimonial-section">
-        <img src="/project-assets 2/testimonial-section/memoji-1.png" alt="emoji-1">
-        <img src="/project-assets 2/testimonial-section/memoji-2.png" alt="emoji-2">
-        <img src="/project-assets 2/testimonial-section/memoji-3.png" alt="emoji-3">
-        <img src="/project-assets 2/testimonial-section/memoji-4.png" alt="emoji-4">
+        <img class="emoji" src="/project-assets 2/testimonial-section/memoji-1.png" alt="emoji-1">
+        <img class="emoji" src="/project-assets 2/testimonial-section/memoji-2.png" alt="emoji-2">
         <h2>Hear What Our Clients Have to Say</h2>
         <h3>“Circle helped us through every stage of our startup. We really enjoyed working with you.”</h3>
-        <p>Kristin Watson</p>
-        <a href="">Booking.com</a>
-        <img src="/project-assets 2/testimonial-section/profile.png" alt="">   
+        <img id="profile-pic" src="/project-assets 2/testimonial-section/profile.png" alt="">
+        <p id="profile-name">Kristin Watson</p>
+        <a id="profile-link" href="">Booking.com</a>
+        <img class="emoji" src="/project-assets 2/testimonial-section/memoji-3.png" alt="emoji-3">
+        <img class="emoji" src="/project-assets 2/testimonial-section/memoji-4.png" alt="emoji-4">
 </section>
 
 <section>
     <h2>Our Services</h2>
-    <article>
-        <img src="/project-assets 2/services-section/icons/1.svg" alt="">
+
+    <article class="card">
+        <img class="img-services" src="/project-assets 2/services-section/icons/1.svg" alt="">
         <h3>User Interface Design</h3>
-        <p>Circle provides you with a stunning user interface design that is accessible to everyone.</p>
+        <p class="text">Circle provides you with a stunning user interface design that is accessible to everyone.</p>
         <a href="/">Learn More</a>
     </article>
-    <article>
-        <img src="/project-assets 2/services-section/icons/2.svg" alt="">
+
+    <article class="card">
+        <img class="img-services" src="/project-assets 2/services-section/icons/2.svg" alt="">
         <h3>User Experience Design</h3>
         <p class="text">Circle always focuses on delivering the best user experience to your customers.</p>
         <a href="/">Learn More</a>
     </article>
-    <article>
-        <img src="/project-assets 2/services-section/icons/3.svg" alt="">
+
+    <article class="card">
+        <img class="img-services" src="/project-assets 2/services-section/icons/3.svg" alt="">
         <h3>Application Development</h3>
         <p class="text">We develop high-quality mobile and web applications using the latest technology stack.</p>
         <a href="/">Learn More</a>
     </article>
+
 </section>
 <section>
     <div>
