section 6 and Footer, done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <h1>Empower Your Business With Stunning Desing!</h1>
    <p class="text text-sect-1">Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
    <div class="btns">
-    <button class="background-btn">Get in touch</button>
+    <button class="background-btn size-btn-sec-1">Get in touch</button>
     <a href="/">See our work</a>
    </div> 
    
@@ -54,29 +54,29 @@
     <img src="/project-assets 2/logos/amazon-logo.svg" alt="amazon-logo">
 </section>
 
-<div id="div-section-3">
+<section>
     <h2>Recent Projects</h2>
-    <section id="section-3">
+    <div>
         <article class="card" >
             <img class= "img-card" src="/project-assets 2/projects-section/1.jpg" alt="simplify">
-        <h3>Simplify</h3>
-        <p class="text">UI Design & App Development</p>
-        <a href="">Learn more</a>
-    </article>
+            <h3>Simplify</h3>
+            <p class="text">UI Design & App Development</p>
+            <a href="">Learn more</a>
+        </article>
         <article class="card">
             <img class= "img-card" src="/project-assets 2/projects-section/2.jpg" alt="Dashcoin">
-        <h3>Dashcoin</h3>
+            <h3>Dashcoin</h3>
             <p class="text">Web Development</p>
-        <a href="">Learn more</a>
-    </article>
+            <a href="">Learn more</a>
+        </article>
         <article class="card">
             <img class= "img-card" src="/project-assets 2/projects-section/3.jpg" alt="simplify">
-        <h3>Vectorify</h3>
-        <p class="text">User Experience Desing</p>
-        <a href="">Learn more</a>
-    </article>
+            <h3>Vectorify</h3>
+            <p class="text">User Experience Desing</p>
+            <a href="">Learn more</a>
+        </article>
+    </div>  
 </section>
-</div>
 
 <section class="testimonial-section">
         <img class="emoji" src="/project-assets 2/testimonial-section/memoji-1.png" alt="emoji-1">
@@ -115,28 +115,25 @@
     </article>
 
 </section>
-<section>
+
+<section class="section-5">
     <div>
         <h2>Do you have any questions?</h2>
         <p>let us help you!</p>
         <input type="email" placeholder="Enter your email">
-        <button class="background-btn">Suscribe</button>
+        <button class="background-btn size-btn-sec-5">Suscribe</button>
     </div>
 </section>
 <footer>
     <div>
         <img src="/project-assets 2/logos/circle.svg" alt="logo">
-        <p>2972 Westheimer Rd. Santa Ana, Illinois 85486 </p>
+        <p class="text">2972 Westheimer Rd. Santa Ana, Illinois 85486 </p>
     </div>
     <div>
         <ul>
             <li>Team</li>
             <li>Services</li>
             <li>About Us</li>
-        </ul>
-    </div>
-    <div>
-        <ul>
             <li>Press</li>
             <li>Projects</li>
             <li>Privacy Policy</li>
