--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <img src="/project-assets 2/logos/fedex-logo.svg" alt="fedex-logo">
             <img src="/project-assets 2/logos/amazon-logo.svg" alt="amazon-logo">
         </section>
-
+        <br>
+        <br>
+        <br>
         <section class="projects">
             <h3>Recent Projects</h3>
             <div class="cards">
@@ -65,7 +67,7 @@
                     <img class= "img-card" src="/project-assets 2/projects-section/1.jpg" alt="simplify">
                     <p class="intro_text_medium">Simplify</p>
                     <p class="text_color headline_regular">UI Design & App Development</p>
-                    <a class="text-link" href="">Learn more</a>
+                    <a class="text-link" href="/project-page.html">Learn more</a>
                 </article>
 
                 <article class="card">
@@ -83,8 +85,13 @@
                 </article>
             </div>  
         </section>
-
+        <br>
+        <br>
+        <br>
         <section class="testimonial">
+          <!--<div id="testimonial_background">
+                <img src="/project-assets 2/testimonial-section/orbit.png" alt="">
+            </div> -->
                 <img class="testimonial_emoji emoji-1" src="/project-assets 2/testimonial-section/memoji-1.png" alt="emoji-1">
                 <img class="testimonial_emoji emoji-2" src="/project-assets 2/testimonial-section/memoji-2.png" alt="emoji-2">
                 <h3 class="intro-text-h3">Hear What Our Clients Have to Say</h3>
@@ -98,13 +105,14 @@
                         <a id="profile-link" href="">Booking.com</a>
                     </div>
                 </div>
-            
                 <img class="testimonial_emoji emoji-3" src="/project-assets 2/testimonial-section/memoji-3.png" alt="emoji-3">
                 <img class="testimonial_emoji emoji-4" src="/project-assets 2/testimonial-section/memoji-4.png" alt="emoji-4">
         </section>
-
-        <section>
-            <h2>Our Services</h2>
+        <br>
+        <br>
+        <br>
+        <section class="services">
+            <h3>Our Services</h3>
             <div class="cards">
                 <article class="card">
                     <div class="card_img">
@@ -134,11 +142,13 @@
                 </article>
              </div>
         </section>
-
+        <br>
+        <br>
+        <br>
         <section class="contact_us">
             <div>
-                <h2>Do you have any questions?</h2>
-                <p>let us help you!</p>
+                <h3>Do you have any questions?</h3>
+                <p>Let us help you!</p>
                 <form class="contact_us_form" action="/">
                     <input class="contact_us_form_email" type="email" placeholder="Enter your email">
                     <button class="background-btn size-btn-sec-5">Suscribe</button>
@@ -147,7 +157,9 @@
                 
             </div>
         </section>
-
+        <br>
+        <br>
+        <br>
         <footer class="footer">
                 <div class="footer_container">
                     <div class="footer_container_contact_details_left">
