--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/common.css">
     <title>Home Page</title>
 </head>
 <body> 
@@ -33,7 +34,9 @@
            </div>
             
         </nav>
-    
+        <br>
+        <br>
+        <br>
         <section class="circlepj_hero">
         <div id="image-hero-section">
                 <img src="/project-assets 2/hero-section/hero-image.png" alt="hero-image">
