--- a/contact-us.html
+++ b/contact-us.html
@@ -58,7 +58,7 @@
                 <button class="form-submit">Submit</button>
         </form>
 
-            <p id="p_result_message" class="contact_us_result_message">Hola Mundo... Probando.. Probando</p>
+            <p id="p_result_message" class="contact_us_result_message"></p>
        
         <br>
         <br>
